--- a/styles.css
+++ b/styles.css
@@ -37,10 +37,11 @@ footer {
 
 main {
     height: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: var(--size-xxxlarge);
     gap: var(--size-xxxlarge);
     overflow: scroll;
@@ -68,7 +69,8 @@ main {
 
 .game-settings, .game-score{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
     gap: var(--size-medium);
     padding: var(--size-medium);
 }
@@ -77,4 +79,29 @@ main {
     display: flex;
     padding: var(--size-medium);
     justify-content: space-around;
+}
+
+.pop-up{
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%,-50%);
+    background-color: white;
+    padding: var(--size-medium);
+    font-size: var(--size-xlarge);
+    border-radius: var(--size-xxsmall);
+}
+
+.pop-up > .msg{
+    text-align: center;
+}
+
+.game-end-options > button{
+    font-size: var(--size-xlarge);
+    padding: var(--size-medium);
+}
+
+#hidden{
+    position: absolute;
+    transform: scale(0,0);
 }
