--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ main {
 
 .game-settings, .game-score{
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     gap: var(--size-medium);
