Hook up grid cells to add 'X' or 'O' when clicked. Added array to keep track of pressed areas Adjust CSS styling to make board more rectangular and have a background Change grid cells to buttons
TODO:
- Game logic to determine which player is clicking
- Prevent over-writing existing cells
- Check if someone has won

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@ main {
     display: grid;
     grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
     gap: var(--size-medium);
+    background-color: #AAAAAA;
+    border: none;
 }
 
 .piece{
@@ -61,10 +63,11 @@ main {
     display: grid;
     align-content: center;
     justify-content: center;
+    text-align: center;
     font-family: sans-serif;
     padding: 0;
     border: 1px solid black;
-    border-radius: var(--size-medium);
+    border: none
 }
 
 .game-settings, .game-score{
